[workspace]
members = [
    "src/rave",
    "src/rave_h264",
    "src/rave_h264_nvidia",
    "src/rave_mp4",
    "src/rave_ops",
    "src/rave_ops_nvidia",
    "src/rave_rtp",
    "src/rave_rtsp",
    "src/rave_sdp",
    "src/rave_types",
]

[workspace.package]
version = "0.1.1"
edition = "2021"
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
keywords = ["rave", "audio", "video", "media", "h264"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oddity-ai/rave"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]

[workspace.dependencies]
base64 = "0.21"
bytes = { version = "1.4" }
http = "0.2"
rand = { version = "0.8" }
rave_types = { version = "0.1.1" }
tokio-util = { version = "0.7", default-features = false, features = ["codec"] }
