[workspace]
resolver = "2"
members = [
  "src/rave_h264",
  "src/rave_h264_nvidia",
  "src/rave_mp4",
  "src/rave_ops",
  "src/rave_ops_nvidia",
  "src/rave_rtp",
  "src/rave_rtsp",
  "src/rave_sdp",
  "src/rave_types",
]

[workspace.package]
version = "0.1.2"
edition = "2021"
categories = ["multimedia", "multimedia::audio", "multimedia::video"]
keywords = ["rave", "audio", "video", "media", "h264"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/oddity-ai/rave"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]

[workspace.dependencies]
base64 = "=0.22.1"
bytes = { version = "=1.12.0" }
futures = { version = "=0.3.32", default-features = false, features = ["std"] }
http = "=1.4.2"
rand = { version = "=0.9.4" }
rave_h264 = { path = "src/rave_h264", version = "=0.1.2" }
rave_h264_nvidia = { path = "src/rave_h264_nvidia", version = "=0.1.2" }
rave_mp4 = { path = "src/rave_mp4", version = "=0.1.2" }
rave_ops = { path = "src/rave_ops", version = "=0.1.2" }
rave_ops_nvidia = { path = "src/rave_ops_nvidia", version = "=0.1.2" }
rave_rtp = { path = "src/rave_rtp", version = "=0.1.2" }
rave_rtsp = { path = "src/rave_rtsp", version = "=0.1.2" }
rave_sdp = { path = "src/rave_sdp", version = "=0.1.2" }
rave_types = { path = "src/rave_types", version = "=0.1.2" }
tokio = { version = "=1.52.3", default-features = false, features = [
  "io-util",
  "io-std",
  "macros",
  "net",
  "bytes",
] }
tokio-stream = { version = "=0.1.18", default-features = false }
tokio-util = { version = "=0.7.18", default-features = false, features = ["codec"] }
