[package]
name = "rave_h264_nvidia"
description = "Support for NVIDIA hardware accelerated H.264 encoding and decoding in rave."
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true

[dependencies]
