[package]
name = "rave_ops"
description = "Image operations for rave."
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
authors.workspace = true

[dependencies]
rave_types = { workspace = true }
