[package]
name = "rave_rtsp"
description = "Support for playing RTSP streams in rave."
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
authors.workspace = true

[dependencies]
base64 = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true, optional = true }
http = { workspace = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt"] }

[features]
client = ["dep:tokio", "dep:tokio-stream", "dep:futures"]
