[package]
name = "rave_sdp"
description = "Support for building and parsing SDP in rave."
version.workspace = true
edition.workspace = true
categories.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
authors.workspace = true

[dependencies]
base64 = { workspace = true }
